Fix: Modify table visualization

--- a/javadevices/PI_CAMSetup.form
+++ b/javadevices/PI_CAMSetup.form
@@ -140,7 +140,7 @@
                     <Component class="DeviceField" name="deviceField31">
                       <Properties>
                         <Property name="identifier" type="java.lang.String" value=""/>
-                        <Property name="labelString" type="java.lang.String" value="Camera Sirial Number:"/>
+                        <Property name="labelString" type="java.lang.String" value="Camera Serial Number:"/>
                         <Property name="offsetNid" type="int" value="2"/>
                       </Properties>
                     </Component>
